--- a/src/main/resources/com/wlf/app/main/mainView.fxml
+++ b/src/main/resources/com/wlf/app/main/mainView.fxml
@@ -15,6 +15,7 @@
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.SeparatorMenuItem?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
@@ -175,110 +176,114 @@
                     <center>
                   <VBox>
                      <children>
-                              <TableView fx:id="table" editable="true" items="${controller.model.content}" tableMenuButtonVisible="true" VBox.vgrow="ALWAYS">
-                                  <columns>
-                                      <TableColumn maxWidth="-1.0" minWidth="200.0" prefWidth="246.0" text="%table.name">
-                                          <cellValueFactory>
-                                              <PropertyValueFactory property="name" />
-                                          </cellValueFactory>
-                                      </TableColumn>
-                                      <TableColumn minWidth="100.0" prefWidth="250.0" text="%table.file">
-                                          <cellValueFactory>
-                                              <PropertyValueFactory property="downloadedFileName" />
-                                          </cellValueFactory>
-                                      </TableColumn>
-                                      <TableColumn minWidth="0.0" prefWidth="134.0" text="%table.game">
-                                          <cellValueFactory>
-                                              <PropertyValueFactory property="game" />
-                                          </cellValueFactory>
-                                      </TableColumn>
-                                      <TableColumn prefWidth="71.0" text="%table.type">
-                                          <cellValueFactory>
-                                              <PropertyValueFactory property="type" />
-                                          </cellValueFactory>
-                                      </TableColumn>
-                                      <TableColumn prefWidth="136.0" text="%table.mode">
-                                          <cellValueFactory>
-                                              <PropertyValueFactory property="modes" />
-                                          </cellValueFactory>
-                                      </TableColumn>
-                                      <TableColumn editable="false" prefWidth="32.0">
-                                          <cellFactory>
-                                              <CheckBoxTableCellFactory />
-                                          </cellFactory>
-                                          <cellValueFactory>
-                                              <PropertyValueFactory property="installed" />
-                                          </cellValueFactory>
-                                          <graphic>
-                                              <Label text="%table.installed">
-                                                  <tooltip>
-                                                      <Tooltip text="Installed" />
-                                                  </tooltip>
-                                              </Label>
-                                          </graphic>
-                                      </TableColumn>
-                                      <TableColumn minWidth="0.0" prefWidth="32.0">
-                                          <cellFactory>
-                                              <CheckBoxTableCellFactory />
-                                          </cellFactory>
-                                          <cellValueFactory>
-                                              <PropertyValueFactory property="completed" />
-                                          </cellValueFactory>
-                                          <graphic>
-                                              <Label text="%table.completed">
-                                                  <tooltip>
-                                                      <Tooltip text="Completed" />
-                                                  </tooltip>
-                                              </Label>
-                                          </graphic>
-                                      </TableColumn>
-                                      <TableColumn fx:id="colDateAdded" prefWidth="120.0" text="%table.dateAdded">
-                                          <cellValueFactory>
-                                              <PropertyValueFactory property="dateAdded" />
-                                          </cellValueFactory>
-                                      </TableColumn>
-                                      <TableColumn prefWidth="180.0" text="%table.rating">
-                                          <cellFactory>
-                                              <RatingTableCellFactory />
-                                          </cellFactory>
-                                          <cellValueFactory>
-                                              <PropertyValueFactory property="rating" />
-                                          </cellValueFactory>
-                                      </TableColumn>
-                              <TableColumn prefWidth="75.0" text="%table.dateCreated">
-                                  <cellValueFactory>
-                                      <PropertyValueFactory property="dateCreated" />
-                                  </cellValueFactory>
-                              </TableColumn>
-                              <TableColumn prefWidth="75.0" text="%table.dateLastPlayed">
-                                  <cellValueFactory>
-                                      <PropertyValueFactory property="dateLastPlayed" />
-                                  </cellValueFactory>
-                              </TableColumn>
-                              <TableColumn prefWidth="75.0" text="%table.dateCompleted">
-                                  <cellValueFactory>
-                                      <PropertyValueFactory property="dateCompleted" />
-                                  </cellValueFactory>
-                              </TableColumn>
-                                  </columns>
-                                  <contextMenu>
-                                      <ContextMenu onShowing="#updateContextMenu">
-                                          <items>
-                                              <MenuItem fx:id="quickPlay" mnemonicParsing="false" onAction="#onPlaySingleMap" text="%contextMenu.quickPlay" />
-                                              <MenuItem fx:id="menuItemInstall" mnemonicParsing="false" onAction="#onDeploy" text="%contextMenu.install" />
-                                              <MenuItem fx:id="menuItemRemove" mnemonicParsing="false" onAction="#onRemove" text="%contextMenu.remove" />
-                                              <SeparatorMenuItem />
-                                              <MenuItem mnemonicParsing="false" onAction="#onMarkComplete" text="%contextMenu.markComplete" />
-                                              <MenuItem mnemonicParsing="false" onAction="#onRate" text="%contextMenu.rate" />
-                                              <SeparatorMenuItem />
-                                              <MenuItem mnemonicParsing="false" onAction="#onDelete" text="%contextMenu.delete" />
-                                          </items>
-                                      </ContextMenu>
-                                  </contextMenu>
-                           <columnResizePolicy>
-                              <TableView fx:constant="UNCONSTRAINED_RESIZE_POLICY" />
-                           </columnResizePolicy>
-                              </TableView>
+                        <ScrollPane fitToHeight="true" vbarPolicy="NEVER" VBox.vgrow="ALWAYS">
+                           <content>
+                                    <TableView fx:id="table" editable="true" items="${controller.model.content}" tableMenuButtonVisible="true">
+                                        <columns>
+                                            <TableColumn maxWidth="-1.0" minWidth="200.0" prefWidth="246.0" text="%table.name">
+                                                <cellValueFactory>
+                                                    <PropertyValueFactory property="name" />
+                                                </cellValueFactory>
+                                            </TableColumn>
+                                            <TableColumn minWidth="100.0" prefWidth="250.0" text="%table.file">
+                                                <cellValueFactory>
+                                                    <PropertyValueFactory property="downloadedFileName" />
+                                                </cellValueFactory>
+                                            </TableColumn>
+                                            <TableColumn minWidth="0.0" prefWidth="134.0" text="%table.game">
+                                                <cellValueFactory>
+                                                    <PropertyValueFactory property="game" />
+                                                </cellValueFactory>
+                                            </TableColumn>
+                                            <TableColumn prefWidth="71.0" text="%table.type">
+                                                <cellValueFactory>
+                                                    <PropertyValueFactory property="type" />
+                                                </cellValueFactory>
+                                            </TableColumn>
+                                            <TableColumn prefWidth="136.0" text="%table.mode">
+                                                <cellValueFactory>
+                                                    <PropertyValueFactory property="modes" />
+                                                </cellValueFactory>
+                                            </TableColumn>
+                                            <TableColumn editable="false" prefWidth="32.0">
+                                                <cellFactory>
+                                                    <CheckBoxTableCellFactory />
+                                                </cellFactory>
+                                                <cellValueFactory>
+                                                    <PropertyValueFactory property="installed" />
+                                                </cellValueFactory>
+                                                <graphic>
+                                                    <Label text="%table.installed">
+                                                        <tooltip>
+                                                            <Tooltip text="Installed" />
+                                                        </tooltip>
+                                                    </Label>
+                                                </graphic>
+                                            </TableColumn>
+                                            <TableColumn minWidth="0.0" prefWidth="32.0">
+                                                <cellFactory>
+                                                    <CheckBoxTableCellFactory />
+                                                </cellFactory>
+                                                <cellValueFactory>
+                                                    <PropertyValueFactory property="completed" />
+                                                </cellValueFactory>
+                                                <graphic>
+                                                    <Label text="%table.completed">
+                                                        <tooltip>
+                                                            <Tooltip text="Completed" />
+                                                        </tooltip>
+                                                    </Label>
+                                                </graphic>
+                                            </TableColumn>
+                                            <TableColumn prefWidth="180.0" text="%table.rating">
+                                                <cellFactory>
+                                                    <RatingTableCellFactory />
+                                                </cellFactory>
+                                                <cellValueFactory>
+                                                    <PropertyValueFactory property="rating" />
+                                                </cellValueFactory>
+                                            </TableColumn>
+                                            <TableColumn fx:id="colDateAdded" prefWidth="120.0" text="%table.dateAdded">
+                                                <cellValueFactory>
+                                                    <PropertyValueFactory property="dateAdded" />
+                                                </cellValueFactory>
+                                            </TableColumn>
+                                    <TableColumn fx:id="colDateCreated" prefWidth="120.0" text="%table.dateCreated">
+                                        <cellValueFactory>
+                                            <PropertyValueFactory property="dateCreated" />
+                                        </cellValueFactory>
+                                    </TableColumn>
+                                    <TableColumn fx:id="colDateLastPlayed" prefWidth="120.0" text="%table.dateLastPlayed">
+                                        <cellValueFactory>
+                                            <PropertyValueFactory property="dateLastPlayed" />
+                                        </cellValueFactory>
+                                    </TableColumn>
+                                    <TableColumn fx:id="colDateCompleted" prefWidth="120.0" text="%table.dateCompleted">
+                                        <cellValueFactory>
+                                            <PropertyValueFactory property="dateCompleted" />
+                                        </cellValueFactory>
+                                    </TableColumn>
+                                        </columns>
+                                        <contextMenu>
+                                            <ContextMenu onShowing="#updateContextMenu">
+                                                <items>
+                                                    <MenuItem fx:id="quickPlay" mnemonicParsing="false" onAction="#onPlaySingleMap" text="%contextMenu.quickPlay" />
+                                                    <MenuItem fx:id="menuItemInstall" mnemonicParsing="false" onAction="#onDeploy" text="%contextMenu.install" />
+                                                    <MenuItem fx:id="menuItemRemove" mnemonicParsing="false" onAction="#onRemove" text="%contextMenu.remove" />
+                                                    <SeparatorMenuItem />
+                                                    <MenuItem mnemonicParsing="false" onAction="#onMarkComplete" text="%contextMenu.markComplete" />
+                                                    <MenuItem mnemonicParsing="false" onAction="#onRate" text="%contextMenu.rate" />
+                                                    <SeparatorMenuItem />
+                                                    <MenuItem mnemonicParsing="false" onAction="#onDelete" text="%contextMenu.delete" />
+                                                </items>
+                                            </ContextMenu>
+                                        </contextMenu>
+                                 <columnResizePolicy>
+                                    <TableView fx:constant="UNCONSTRAINED_RESIZE_POLICY" />
+                                 </columnResizePolicy>
+                                    </TableView>
+                           </content>
+                        </ScrollPane>
                      </children>
                   </VBox>
                     </center>
